k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goldsmith-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goldsmith-backend
  template:
    metadata:
      labels:
        app: goldsmith-backend
    spec:
      containers:
        - name: goldsmith-backend
          image: mugesh202006/goldsmith-backend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
