k8s/database-statefullset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goldsmith-db
spec:
  serviceName: goldsmith-db
  replicas: 1
  selector:
    matchLabels:
      app: goldsmith-db
  template:
    metadata:
      labels:
        app: goldsmith-db
    spec:
      containers:
        - name: goldsmith-db
          image: mugesh202006/goldsmith-db:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
