k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: goldsmith-backend
spec:
  type: NodePort
  selector:
    app: goldsmith-backend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30081
