k8s/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: goldsmith-db
spec:
  type: ClusterIP
  selector:
    app: goldsmith-db
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
