k8s/frontend-sevice.yml
apiVersion: v1
kind: Service
metadata:
  name: goldsmith-frontend
spec:
  type: ClusterIP
  selector:
    app: goldsmith-frontend
  ports:
    - port: 80
      targetPort: 80
