k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldsmith-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$).(.*)
            pathType: Prefix
            backend:
              service:
                name: goldsmith-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goldsmith-frontend
                port: 
                  number: 80
